--- a/themes/stepstyle/style.css
+++ b/themes/stepstyle/style.css
@@ -1,6 +1,13 @@
 /*
-Theme Name: My Theme
+Theme Name: Step Style
 Author: Preet Aulakh
 Version: 1.0
 Description: A custom Full Site Editing theme for my e-commerce project.
 */
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #ffffff;
+}
+
